Fix contrast errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 
 /* Generic styles */
 body {
+    background-color: black;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -171,7 +172,7 @@ section {
 
 .all-in-button {
     display: block;
-    color: black;
+    color: white;
     padding: 10px 20px;
     margin: 5px auto;
     border: none;
